# modern-cmake-by-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
answer/: CMakeLists.txt
curl_wrapper/: CMakeLists.txt
